# agentic-assistants

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE-alpha.2.md  SECURITY.md  handoffs.md  pyproject.toml  quality.md  scope.md
.github/workflows/: validate-assistants.yml
assistants/ai-studio/: README.md  persona.md
assistants/analytics/: README.md  persona.md
assistants/compliance/: README.md  persona.md
assistants/content/: README.md  persona.md
assistants/design/: README.md  persona.md
assistants/engineering/: README.md  assistant.yaml  deliverables.md  (+6 more)
docs/: PROJECT_VISION.md  architecture.md  collaboration.md  constitution.md  governance.md  quality.md  routing.md  standards.md  versioning.md
examples/: routing-examples.md
roadmap/: implementation.md  migration.md
scripts/: agentic.py  assistant_executor.py  assistant_loader.py  assistant_orchestrator.py  assistant_planner.py  assistant_registry.py  assistant_router.py  check_assistant_structure.py  create_assistant.py  export_assistant.py  generate_docs.py  list_assistants.py  llm_client.py  run_assistant.py  search_assistants.py  show_assistant.py  test_registry.py  validate.py
shared/: company-context.md  design-standards.md  writing-standards.md
templates/: assistant-specification.md  change-request.md
tests/: test_cli.py  test_cli_execute.py  test_cli_route.py  test_executor.py  test_executor_llm.py  test_llm_client.py  test_orchestrator.py  test_planner.py  test_prompt_rendering.py  test_registry.py  test_router.py
validation/: README.md  guide.md  rubric.md
(+46 files in other folders)
