[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-assistants"
version = "0.1.0"
description = "Command-line tools for managing Agentic Assistants."
requires-python = ">=3.10"

[project.scripts]
agentic = "scripts.agentic:main"

[tool.setuptools]
packages = ["scripts"]